# violet-trace-analyzer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sys_var.h
analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.h  config.h  functionTracer.cpp  functionTracer.h  main.cpp  parser.cpp  parser.h  stateRecord.h  symtable.cpp  symtable.h  sys_var.h  trace.h  utils.cpp  utils.h
dtl/: Diff.hpp  functors.hpp
dtl/dtl/: Diff.hpp  functors.hpp
py/: analyzer.py  parselib.py  utils.py  violet_trace.py
test/: expected_result_LatencyTrace1_autocommit.txt  expected_result_LatencyTrace1_autocommit_innodb_flush_log_at_trx_commit.txt  mysqld.sym
